# nick-almeter-ttb-label-verification-app

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  render.yaml
app/: main.py
app/api/: batch.py  errors.py  images.py  logging.py  responses.py  schemas.py  verify.py
app/comparison/: __init__.py  engine.py  models.py  normalizers.py
app/vision/: __init__.py  preprocessing.py  prompts.py  service.py
frontend/: app.js  index.html  styles.css
scripts/: run_phase6_live_checklist.py  run_vision_sample.py
tests/: test_batch_response_schema.py  test_comparison_engine.py  test_health.py  test_image_preprocessing.py  test_verify_batch_endpoint.py  test_verify_endpoint.py  test_verify_response_schema.py  test_vision_service.py
