[project]
name = "ttb-label-verification-app"
version = "0.0.1"
description = "Phase 0 scaffold for the TTB Label Verification proof of concept."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2.43.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.32",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
